HTML 1일차(텍스트)

--- a/web_ict04/src/main/webapp/html5/01_basic.html
+++ b/web_ict04/src/main/webapp/html5/01_basic.html
@@ -13,19 +13,21 @@
 <img src = "이미지 경로"> - 이미지 가져오기
 -->
 
-<p>
-세상에 스트레스를 안 겪어본 사람은 없을 것이다. <br>
-스트레스는 직장 생활, 가족, 드라마, 인간 관계, 돈 문제 등 다양한 상황에서<br>
-겪게 될 수 있다. 사실 약간의 스트레스는 육체적, 정신적으로 성장할 수 있는<br>
-기회를 주기 때문에 이로운 작용을 하지만 과도하거나 만성 스트레스에 이르면<br>
-당연히 해롭다. 스트레스를 장기간 받게 되면 긴장성 두통을 비롯한 다양한 질환을<br> 
-겪을 수도 있어 인간 관계와 학교, 직장에서 제대로 된 생활을 하지 못하게 된다.<br>
-</p>
-
-<p>
-[1] 스트레스가 당신의 삶을 장악해버리기 전에 이 글을 통해 스트레스를 관리하는<br>
-법과 건강에 악영향을 끼치기 전에 예방하고 해결하는 법을 배워보자.
-</p>
+<div style = "background-color : pink"> <!-- 배경색 -->
+	<p>
+	세상에 스트레스를 안 겪어본 사람은 없을 것이다. <br>
+	스트레스는 직장 생활, 가족, 드라마, 인간 관계, 돈 문제 등 다양한 상황에서<br>
+	겪게 될 수 있다. 사실 약간의 스트레스는 육체적, 정신적으로 성장할 수 있는<br>
+	기회를 주기 때문에 이로운 작용을 하지만 과도하거나 만성 스트레스에 이르면<br>
+	당연히 해롭다. 스트레스를 장기간 받게 되면 긴장성 두통을 비롯한 다양한 질환을<br> 
+	겪을 수도 있어 인간 관계와 학교, 직장에서 제대로 된 생활을 하지 못하게 된다.<br>
+	</p>
+	
+	<p>
+	[1] 스트레스가 당신의 삶을 장악해버리기 전에 이 글을 통해 스트레스를 관리하는<br>
+	법과 건강에 악영향을 끼치기 전에 예방하고 해결하는 법을 배워보자.
+	</p>
+</div>
 
 <h3>부정적인 생각 재구성하기</h3>
  <img src="./images/stress1.jpg" width = 500 height = 350 alt = "부정적인 생각 재구성">
