--- a/web_ict04/src/main/webapp/html5/01_basic.html
+++ b/web_ict04/src/main/webapp/html5/01_basic.html
@@ -11,7 +11,10 @@
 	<div> - 블럭(줄바꿈) 단위로 묶기
 	<img src = "이미지 경로"> - 이미지 가져오기
 	-->
-	
+	 <a href="http://ko.wikihow.com" target="_blank">호그와트</a><br>
+	 <a href="http://naver.com" target="_blank">네이버</a><br>
+	 <a href="http://google.com" target="_blank">구글</a>
+	 
 	 <div style = "background-color : pink"> <!-- 배경색 -->
 		<p>
 		세상에 스트레스를 안 겪어본 사람은 없을 것이다. <br>
