HTML 1일차 복습(고질라를 알아보자)

--- a/web_ict04_re/src/main/webapp/html5/01_godzilla.html
+++ b/web_ict04_re/src/main/webapp/html5/01_godzilla.html
@@ -68,7 +68,7 @@
 			<br>
 			
 			<center>
-				<table border=1 width=90% height=200px>
+				<table border=1 width=90% height=200px id="shillouete">
 				<caption style="font-weight:bold; padding-bottom : 20px;">시대별 고질라의 변천사</caption>
 					<tr height=30px id="godzilla">
 						<th>시리즈</th>
