HTML 2일차 복습(회원가입 페이지)

--- a/web_ict04_re/src/main/webapp/html5/day02/02_join.html
+++ b/web_ict04_re/src/main/webapp/html5/day02/02_join.html
@@ -26,21 +26,22 @@
 		text-align: center;
 		font-weight: bold;
 	}
+	fieldset, img{
+		display : block;
+		margin : auto;
+	}
 </style>
 </head>
 <body>
 	<header>
 		<h1 align="center">회원가입 페이지</h1>
 		<br><br>
-		<center>
 			<img alt="고질라" src="https://i.namu.wiki/i/xbXHTbFZdtARNm_EOFt3U4CKSWuDyOkrnX08-fVCDMtWhBscU0ROw4IGBSmQ3NB2XbgzkRYG9KFj1cWneasRAg6rmbqr8SABpq-Cfo_EuUQSfGsTJntQZbZCO4ElxnnAydM9iGXHe2ywqfCDWb8xrA.webp" width=200 height=200>
-		</center>
 	</header>
 	
 	<section>
 		<article>
 			<br><br>
-		<center>
 			<form action="02_login.html" method="post">
 				<fieldset>
 					<legend>로그인</legend>
@@ -150,7 +151,6 @@
 					</table>
 				</fieldset>
 			</form>
-		</center>
 		</article>
 	</section>
 	
