css 2일차(선택자)

--- a/web_ict04/src/main/webapp/css3/day02/13_link_selector5.html
+++ b/web_ict04/src/main/webapp/css3/day02/13_link_selector5.html
@@ -18,10 +18,10 @@
     <h3>연결선택자 - 그룹 선택자</h3>
     <!--  5.  그룹 선택자 - 한꺼번에 스타일 지정하기 -->
 
-    <header><h3>예약방법 및 요금</h3></header>
+    <header><h3>예약방법 및 요금</h3></header> <!-- 속성적용 - pink 글자색, 굵게 -->
 
     <section id="container">
-        <p>끌레르 펜션에 예약하려면?</p>
+        <p>끌레르 펜션에 예약하려면?</p> <!-- 속성적용 - pink 글자색, 굵게 -->
 
         <ul>
             <li>직접 통화</li>
