--- a/web_ict04_re/src/main/webapp/css3/day02/menu.html
+++ b/web_ict04_re/src/main/webapp/css3/day02/menu.html
@@ -66,7 +66,7 @@
     	
     	<article>
     		<h3>벌꿀오소리에 대해</h3>
-    			<iframe src="https://www.youtube.com/embed/TMNvSkufi0Y?si=Ng0kQxVPPRv9D-kF" title="YouTube video player"></iframe>
+    			<iframe src="http://www.youtube.com/embed/TMNvSkufi0Y?si=Ng0kQxVPPRv9D-kF" title="YouTube video player"></iframe>
     		<p>
     			잡식성이고 식욕이 굉장히 왕성하기 때문에 소형 파충류, 설치류, 토끼, 소형 원숭이 등 
     			각종 동물 외에 알뿌리나 과일 같은 식물은 물론이고 새알과 썩은 고기도 잘 먹는다.
